--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,7 @@ section {
 	color: var(--text);
 	font-family: var(--font-primary);
 	padding-bottom: 65px;
+	min-height: 100vh;
 }
 
 .dark-mode {
@@ -67,7 +68,6 @@ section {
 	color: var(--text);
 	font-family: var(--font-primary);
 	padding-bottom: 65px;
-
 	min-height: 100vh;
 }
 
